--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,11 @@ html,
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu,
     "Helvetica Neue", Helvetica, sans-serif;
 }
+
+.true {
+  background-color: green;
+}
+
+.false {
+  background-color: red;
+}
