--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,26 @@ html,
     "Helvetica Neue", Helvetica, sans-serif;
 }
 
+body {
+  background-color: #333;
+}
+
 .true {
-  background-color: green;
+  color: #a3be8c;
 }
 
 .false {
-  background-color: red;
+  color: #bf616a;
+}
+
+.content {
+  margin: 0 auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.txt-center {
+  text-align: center;
 }
