--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,11 @@ body {
   background-color: #333;
 }
 
-.true {
+.green-text {
   color: #a3be8c;
 }
 
-.false {
+.red-text {
   color: #bf616a;
 }
 
